@@ -4,6 +4,8 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Avoid a shallow dependency on `Products.ZReST`.
+
 - Fixed types tool test to only test creation for type infos.
 
 - utils: Fixed '_OldCacheHeaders' and '_FSCacheHeaders' methods.
